# gde2-common

./: COPYING  NEWS  README  autogen.sh  configure.ac  replace-name.sh
doc/: Makefile.am  autogen.sh.example  gde2-autogen.1  gde2-autogen.txt  gde2-doc-common.1  gde2-doc-common.txt  update-manpages.sh  usage.txt
doc-build/: Makefile.am  gde2-doc-common.in  xmldocs.make
macros/: Makefile.am  gde2-autogen  gde2-code-coverage.m4  gde2-common.m4  gde2-compiler-flags.m4
